feat: add function Cart
